--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="./dist/bundle.js"></script>
   <title>Heuristic Pathfinder</title>
 </head>
 <body>
   <h1>Heuristic Pathfinder</h1>
-  <canvas id="canvas" />
+  <canvas id="canvas" width="800" height="800"></canvas>
 
   
 </body>
