--- a/index.html
+++ b/index.html
@@ -19,8 +19,28 @@
 
     <div class="options-bar">
 
+      <div class="slide-container">
+        <p>Mountains: <span id="hard-output">8</span></p>
+        <input type="range" min="0" max="16" step="1" class="slider" id="hard-slider" />
+      </div>
+
+      <div class="slide-container">
+        <p>Paths: <span id="path-output">6</span></p>
+        <input type="range" min="0" max="12" step="1" class="slider" id="path-slider" />
+      </div>
+
+      <div class="slide-container">
+        <p>Block Density: <span id="block-output">15.0</span></p>
+        <input type="range" min="0.0" max="30.0" step=".1" class="slider" id="block-slider" />
+      </div>
+      <div class="slide-container">
+        <p>Minimum Endpoint distance: <span id="dist-output">100</span></p>
+        <input type="range" min="50" max="150" step="1" class="slider" id="dist-slider" />
+      </div>
+
       <div class="generate-box">
-        <button type="button" id="create-button">Create Random Map!</button>
+        <button type="button" id="create-button">Create Map!</button>
+        <button type="button" id="random-button">Create Random Map!</button>
       </div>
 
       <div class="algs-box">
