add button disabling while generating maps

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <div class="options-bar">
 
       <div class="slide-container">
-        <p>Mountains: <span id="hard-output">8</span></p>
+        <p>Mountains: <span id="hard-output"></span></p>
         <input type="range" min="0" max="16" step="1" class="slider" id="hard-slider" />
       </div>
 
       <div class="slide-container">
-        <p>Paths: <span id="path-output">6</span></p>
-        <input type="range" min="0" max="12" step="1" class="slider" id="path-slider" />
+        <p>Paths: <span id="path-output"></span></p>
+        <input type="range" min="0" max="10" step="1" class="slider" id="path-slider" />
       </div>
 
       <div class="slide-container">
-        <p>Block Density: <span id="block-output">15.0</span></p>
+        <p>Block Density: <span id="block-output"></span></p>
         <input type="range" min="0.0" max="30.0" step=".1" class="slider" id="block-slider" />
       </div>
       <div class="slide-container">
-        <p>Minimum Endpoint distance: <span id="dist-output">100</span></p>
+        <p>Minimum Endpoint distance: <span id="dist-output"></span></p>
         <input type="range" min="50" max="150" step="1" class="slider" id="dist-slider" />
       </div>
 
