--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="algs-box">
-        <select class="algorithms">
+        <select class="algorithms" id="algorithms">
           <option value="bloop">Select an algorithm</option>
           <option value="bfs">Breadth First Search</option>
           <option value="uniform">Uniform Cost</option>
@@ -54,8 +54,8 @@
       </div>
 
       <div class="heu-box">
-        <select class="heuristics">
-          <option value="blorp">Select a heuristic</option>
+        <select class="heuristics" id="heuristics">
+          <option value="blorp">Select a heuristic (A* only)</option>
           <option value="euclidean">Euclidean Distance</option>
           <option value="manhattan">Manhattan Distance</option>
           <option value="chebyshev">Chebyshev Distance</option>
