--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
       </div>
 
       <div class="stats-box">
-        <p>Map size: 25600 Nodes</p>
-        <p>Nodes explored: <span id="size-count">0</span></p>
-        <p>Map Coverage: <span id="size-percent">0</span>%</p>
+        <p>Map size: 25600 Tiles</p>
+        <p>Tiles explored: <span id="size-count">0</span></p>
+        <p>Map Coverage (click map): <span id="size-percent">0</span>%</p>
 
-        <p>Time Elapsed (ms): <span id="timer"></span></p>
+        <p>Time Elapsed: <span id="timer"></span>(ms)</p>
 
       </div>
 
