add coordinate info to box

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 
       <div class="stats-box">
         <p>Map size: 25600 Tiles</p>
+        <p>Start Coordinates: <span id="start-coords"></span></p>
+        <p>End Coordinates: <span id="end-coords"></span></p>
         <p>Tiles explored: <span id="size-count">0</span></p>
         <p>Map Coverage (click map): <span id="size-percent">0</span>%</p>
 
