update link to portfolio

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <li><a href="https://linkedin.com/in/andrewyw/"><img src="./src/img/linkedin.png" id="linkedin" alt="linkedin"></a></li>
           <li><a href="https://angel.co/andrewyw/"><img src="./src/img/angellist.png" id="angellist" alt="angellist"></a></li>
         </ul>
-        <h2><a href="http://www.andrewyw.me/portfolio/home">Back to Portfolio</a></h2>
+        <h2><a href="https://www.andrewyw.io/#two">Back to Portfolio</a></h2>
       </div>
     </div>
   </div>
